# VStarsStack

./: .gitignore  Jenkinsfile  MANIFEST.in  README.md  cfg.py  clean.py  clip.py  common.py  compile_c_modules.py  configurate.py  convert.py  convert2.py  convert2jpg.py  cut.py  data.py  describe.py  detect_stars.py  display.py  display_match.py  displaynef.py  enhance_dataset.py  fine_shift.py  get_sample.py  image.py  image_fourier.py  match.py  merge.py  movement.py  movement_flat.py  movement_sphere.py  normalize.py  pipeline.sh  pipeline.txt  precise_match_move.py  process.py  projection.py  pylint.rc  pylintrc  pyproject.toml  readme.md  (+21 more)
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
assets/configs/: nikon_35_1.8.json
calibration/: calibrate_vignetting.py  calibration.py  dark.py  flat.py
cluster/: cluster.py  find_shift.py  lonlat.py  restore.py
compact_objects/: compact_objects.py  configure.py  cut.py  detect.py
configs/: config.json  default.json
debayer/: bayer.py  debayer.py  yuv422.py
doc/: deepsky.tex
image_fix/: border.py  coma.py  deconvolution.py  difference.py  distorsion.ods  distorsion.py  fixes.py  flatten.py  measure_vignetting.py  motion_fix.py  normalize.py  projection.py  remove_sky.py  useL.py  vignetting.py
image_fix/remove_sky_methods/: gauss.py  isoline.py
libs/libimagedeform/: CMakeLists.txt
libs/libimagedeform/include/: image_grid.h
libs/libimagedeform/src/: image_deform_lc.c  image_grid.c
movement/: flat.py  sphere.py
movement/tests/: test_sphere.py
optical_fix/: distorsion.py  fixes.py  vignetting.py
planet/: cut.py  detect.py  planet.py
planets/: buildmap.py  configure.py  planets.py  projection.py
profiling/: performance.py
projection/: perspective.c  perspective.py  setup.py
projection/test/: test_perspective.py
readimage/: classic.py  fits.py  jpeg.py  nef.py  readimage.py  ser.py  tags.py  video.py  yuv.py
reper/: find_shift.py  movement_flat.py  reper.py
segmentation/: remove_landscape.py
shift/: apply_shift.py  select_shift.py  shift.py  shift_image.py
sky_model/: gauss.py  gradient.py  isoline.py  isoline_model.py  quadratic.py  remove_stars.py
src/c_modules/: CMakeLists.txt  get_numpy_path.py
src/c_modules/bayes/: CMakeLists.txt  bayes.c  bayes.h  module.c
src/c_modules/bayes/libbayes/: CMakeLists.txt  bayes.c  bayes.h
src/c_modules/bayes/libbayes/tests/: CMakeLists.txt  bayes.cc
src/c_modules/clusterization/: CMakeLists.txt  module.cc
src/c_modules/clusterization/lib/: CMakeLists.txt
src/c_modules/fine_movement/: CMakeLists.txt
src/c_modules/fine_movement/libimagedeform/: CMakeLists.txt
src/c_modules/fine_movement/libimagedeform/cl/: image_deform_lc.cl
src/c_modules/fine_movement/libimagedeform/include/: image_deform.h  image_deform_gc.h  image_deform_lc.h  image_grid.h  interpolation.h  real.h
src/c_modules/fine_movement/libimagedeform/src/: image_deform.c  image_deform_gc.c  image_deform_lc.c  image_deform_lc_const.c  image_deform_lc_grid.c  image_grid.c  interpolation.c
src/c_modules/fine_movement/libimagedeform/tests/: deform_test.cc  deform_test_gc.cc
src/c_modules/fine_movement/module/: imagedeform.c  imagedeform_gc.c  imagedeform_gc.h  imagedeform_lc.c  imagedeform_module.c  imagegrid.c  imagegrid.h
src/c_modules/movements/: CMakeLists.txt  module.c
src/c_modules/movements/lib/: flat.c  sphere.c  sphere.h
src/c_modules/projections/: CMakeLists.txt  module.c
src/c_modules/projections/lib/: equirectangular.h  orthographic.c  perspective.c
src/vstarstack/: cfg.py  clean.py  common.py  configurate.py  data.py  entry.py  fine_shift.py  image.py  merge.py  process.py  split_sources.py  usage.py
src/vstarstack/calibration/: calibration.py  dark.py  flat.py
src/vstarstack/cluster/: cluster.py  display.py  find_shift.py  lonlat.py
src/vstarstack/debayer/: bayer.py  debayer.py  yuv422.py
src/vstarstack/fine_shift/: fine_shift.py  image_wave.c
src/vstarstack/image_fix/: border.py  coma.py  deconvolution.py  distorsion.py  fixes.py  measure_vignetting.py  motion_fix.py  normalize.py  remove_sky.py  useL.py
src/vstarstack/movement/: flat.py  movement.py  sphere.py
src/vstarstack/projection/: perspective.c
src/vstarstack/readimage/: classic.py  fits.py  nef.py  readimage.py  ser.py  tags.py  video.py  yuv.py
src/vstarstack/segmentation/: remove_landscape.py
src/vstarstack/shift/: apply_shift.py  select_shift.py  shift.py  shift_image.py
src/vstarstack/sky_model/: gauss.py  gradient.py  isoline.py  quadratic.py  remove_stars.py
src/vstarstack/tool/: calibration.py  cfg.py  clean.py  cluster.py  common.py  config.py  configurate.py  configuration.py  darks_library.py  debayer.py  decode.py  fine_shift.py  image.py  manage_project.py  merge.py  moving_object_shift.py  process.py  readimage.py  shift.py  usage.py
src/vstarstack/tools/: camera.py  lens.py
stars/: cluster.py  configure.py  describe.py  detect.py  find_shift.py  lonlat.py  match.py  net.py  process.py  readme.md  stars.py
stars/detector/: detector.py
targets/compact_objects/: compact_objects.py  configure.py  cut.py  detect.py
targets/planets/: buildmap.py  configure.py  planets.py  projection.py
targets/reper/: reper.py
targets/stars/: cluster.py  configure.py  describe.py  detect.py  lonlat.py  match.py  net.py  process.py  stars.py  validate_shift.py
tests/: test_bayes.py  test_cluster_movements.py  test_clusters.py  test_configuration.py  test_cut.py  test_darks.py  test_dataframe.py  test_debayer.py  test_equirectangular.py  test_find_shift.py  test_fine_shift.py  test_flat.py  test_flat_approximation.py  test_merge.py  test_movement_flat.py  test_movement_sphere.py  test_nanmean.py  test_normalization.py  test_projection_orthographic.py  test_projection_perspective.py  test_sky_gradient.py  test_star_description.py  test_star_detection.py  test_star_match.py  test_stars_pipeline.py  test_usage.py
tests/fine_shift/: image3.tiff  image4.tiff
tests/stars/: stars.csv
training/: split_images.py  train_landscape.py
(+74 files in other folders)
