[build-system]
requires = ["setuptools>=61.0", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name        = "vstarstack"
description = "Stacking astrophotos"
version     = "0.2.1"
readme      = "readme.md"
license     = {file = "LICENSE.txt"}
requires-python = ">=3.10"
dependencies = ["numpy",
                "astropy",
                "rawpy <= 0.21.0",
                "pillow",
                "imageio",
                "exifread",
                "opencv-python",
                "scikit-image",
                "scipy",
                "imutils",
                "matplotlib",
                "pytz"
]

authors = [
  { name="Vladislav Tsendrovskii", email="vtcendrovskii@gmail.com" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]

keywords = ["astrophotography"]

[project.scripts]
vstarstack="vstarstack.entry:main"

[project.urls]
"Homepage" = "https://github.com/vladtcvs/VStarsStack"

[tool.setuptools]
#py-modules = ["src.c_modules.compile_c_modules"]
packages = ["vstarstack", "vstarstack.tool", "vstarstack.library"]

[tool.setuptools.package-dir]
"vstarstack" = "src/vstarstack"

#[tool.setuptools.cmdclass]
#build_py = "src.c_modules.compile_c_modules.build_py"
